--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@argent/get-starknet": "^1.1.2",
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
+    "get-starknet": "^1.0.0",
     "starknet": "^2.5.0",
     "vue": "^3.0.0",
     "vuestic-ui": "^1.3.3",
