--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   "dependencies": {
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
-    "get-starknet": "^1.0.0",
-    "starknet": "^2.5.0",
+    "get-starknet": "^1.4.2",
     "vue": "^3.0.0",
     "vuestic-ui": "^1.3.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "6.0.0",
     "babel-eslint": "^10.1.0",
@@ -39,6 +38,9 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "engines": {
+    "node": "~16.14.2"
   },
   "browserslist": [
     "> 1%",
